# BenchAudit

./: .gitignore  CLAUDE.md  CLAUDE_HANDOFF_zh.md  CLAUDE_RESEARCH_CONTEXT_zh.md  DESIGN.md  NEW_CHAT_HANDOFF_zh.md  README.md  RESULTS.md  first_batch_benchmark_sampling_plan.md  pyproject.toml
benchcore/: __init__.py  adapter.py  artifact_consistency.py  artifact_mutation.py  audit_memory.py  auditor.py  checkers.py  cli.py  code_safety.py  code_verifier.py  comparison.py  counterexample_validation.py  coverage.py  defect_injection.py  evaluator_execution.py  evaluators.py  execution.py  execution_attestation.py  field_mapping.py  file_reader.py  forensic.py  gdpval_artifacts.py  gdpval_objective.py  gold_study.py  harness.py  investigator.py  llm_auditor.py  llm_client.py  loader.py  methods.py  ooxml_cells.py  package_scan.py  paired_claim_adjudication.py  planning.py  promotion.py  ranking_impact.py  report.py  response_triage.py  sampling.py  schema.py  (+14 more)
configs/: llm_deepseek.json  llm_deepseek_adapter.json  llm_deepseek_vote3.json  llm_deepseek_vote5.json  llm_gpt55_vote3.json  llm_gpt55_vote5.json  llm_openrouter_gpt55.json  tracebundle_v1.schema.json
docs/: tracebundle_v1.md
examples/: defect_patterns.v1.jsonl  sample_core_benchmark.jsonl  sample_cross_artifact_benchmark.jsonl  sample_multimethod_benchmark.jsonl  sample_rubric_contract_benchmark.jsonl  tracebundle_v1.json
experiments/: README.md
reports/: ds1000_exec_pilot200_summary.json  ds1000_execution_pilot200.md  workspace_filename_collision_20260720.md  workspace_five_optimizations_20260719.md
(+209 files in other folders)
