[project]
name = "benchcore-after623"
version = "0.1.0"
description = "Fresh core-artifact benchmark audit prototype."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
benchcore = "benchcore.cli:main"
