[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "benchaudit"
version = "0.2.0"
description = "Evidence-aware quality and evaluator auditing for LLM and agent benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "defusedxml>=0.7.1",
  "pyarrow>=15.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "python-docx>=1.1",
  "python-pptx>=0.6.23",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
research = [
  "datasets>=2.18",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.12",
]

[project.scripts]
benchcore = "benchcore.cli:main"

[tool.setuptools.packages.find]
include = ["benchcore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
